force-app/main/default/objects/Maintenance__c/fields/Oil_Level__c.field-meta.xml
<CustomField>
    <fullName>Oil_Level__c</fullName>
    <label>Oil Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Very Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>