force-app/main/default/objects/Maintenance__c/fields/Tire_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Tire_Conditions__c</fullName>
    <label>Tire Conditions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>OK</fullName>
            </value>
            <value>
                <fullName>Bad</fullName>
            </value>
            <value>
                <fullName>Very Bad</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>